--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -78,6 +78,11 @@ body {
   font-family: "Yuji Boku";
   src: url('kazengunese.ttf');
 }
+
+@font-face {
+  font-family: "Rasyideen";
+  src: url('felid.ttf');
+}
  
 @font-face { 
   font-family: "Notredame"; 
@@ -454,6 +459,7 @@ h1.alert, h2.alert	{color: #c9c1ba;font-family: Pterra, TrueType;}
 .orc					{font-family: "Thief by The Riddler", Pterra;}
 .beast					{font-family: "Thief by The Riddler", Pterra;}
 .reptile				{font-family: "Kingthings Petrock", Pterra; font-size: 120%;}
+.felid					{font-family: "Rasyideen", Pterra; font-size: 120%;}
 .grenzelhoftian			{font-family: "Emperialisme", "Pterra"; font-size: 120%;}
 .kazengunese			{font-family: "Yuji Boku", Pterra;}
 .orc					{font-family: "Thief by The Riddler", "Pterra";}
